objects/ssot__CourseOfferingParticipation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CourseOfferingParticipantId__c</fullName>
        <label>Course Offering Participant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Course Offering Participation Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsGraded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Graded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipationDate__c</fullName>
        <label>Participation Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipationType__c</fullName>
        <label>Participation Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719820269222_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CourseOfferingParticipation_CourseOf_rel</label>
        <referenceTo>ssot__CourseOfferingParticipant__dlm</referenceTo>
        <relationshipLabel>CourseOfferingParticipation_CourseOf_rel</relationshipLabel>
        <relationshipName>rel_1719820269222_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>